<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center">

    <ru.egslava.blurredview.BlurredImageView
        android:id="@+id/blurred"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:downSampling="1"
        app:keepOriginal="true"
        app:radius="0.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:keepScreenOn="false"
        android:orientation="vertical"
        android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn1"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn2"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn2"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn3"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn3"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn4"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn5"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn5"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn6"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn6"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn7"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn8"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn8"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn9"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/activity_ref_btn9"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn10"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/activity_ref_btn10"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton" />
    </LinearLayout>
    </LinearLayout>
</FrameLayout>