<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center">

    <ru.egslava.blurredview.BlurredImageView
        android:id="@+id/blurred"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:downSampling="1"
        app:keepOriginal="true"
        app:radius="0.3"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center">

        <include layout="@layout/card"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn1"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:text="@string/activity_main_btn1"
                android:textColor="@android:color/white"
                android:theme="@style/MyButton"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:text="@string/activity_main_btn2"
                android:textColor="@android:color/white"
                android:theme="@style/MyButton"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:text="@string/activity_main_btn3"
                android:textColor="@android:color/white"
                android:theme="@style/MyButton"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>